build/antlr4cpp_generated_src/Basic/BasicParser.cpp

// Generated from Basic.g4 by ANTLR 4.13.2


#include "BasicVisitor.h"

#include "BasicParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct BasicParserStaticData final {
  BasicParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  BasicParserStaticData(const BasicParserStaticData&) = delete;
  BasicParserStaticData(BasicParserStaticData&&) = delete;
  BasicParserStaticData& operator=(const BasicParserStaticData&) = delete;
  BasicParserStaticData& operator=(BasicParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag basicParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<BasicParserStaticData> basicParserStaticData = nullptr;

void basicParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (basicParserStaticData != nullptr) {
    return;
  }
#else
  assert(basicParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<BasicParserStaticData>(
    std::vector<std::string>{
      "prog", "line", "amperoper", "linenumber", "amprstmt", "statement", 
      "vardecl", "printstmt1", "printlist", "getstmt", "letstmt", "variableassignment", 
      "relop", "neq", "ifstmt", "forstmt1", "forstmt2", "nextstmt", "inputstmt", 
      "readstmt", "dimstmt", "gotostmt", "gosubstmt", "pokestmt", "callstmt", 
      "hplotstmt", "vplotstmt", "plotstmt", "ongotostmt", "ongosubstmt", 
      "vtabstmnt", "htabstmnt", "himemstmt", "lomemstmt", "datastmt", "datum", 
      "waitstmt", "xdrawstmt", "drawstmt", "defstmt", "tabstmt", "speedstmt", 
      "rotstmt", "scalestmt", "colorstmt", "hcolorstmt", "hlinstmt", "vlinstmt", 
      "onerrstmt", "prstmt", "instmt", "storestmt", "recallstmt", "liststmt", 
      "popstmt", "amptstmt", "includestmt", "endstmt", "returnstmt", "restorestmt", 
      "number", "func_", "signExpression", "exponentExpression", "multiplyingExpression", 
      "addingExpression", "relationalExpression", "expression", "var_", 
      "varname", "varsuffix", "varlist", "exprlist", "sqrfunc", "chrfunc", 
      "lenfunc", "ascfunc", "midfunc", "pdlfunc", "peekfunc", "intfunc", 
      "spcfunc", "frefunc", "posfunc", "usrfunc", "leftfunc", "rightfunc", 
      "strfunc", "fnfunc", "valfunc", "scrnfunc", "sinfunc", "cosfunc", 
      "tanfunc", "atnfunc", "rndfunc", "sgnfunc", "expfunc", "logfunc", 
      "absfunc", "tabfunc"
    },
    std::vector<std::string>{
      "", "'$'", "'%'", "'RETURN'", "'\\u8868\\u793A'", "'GOTO'", "'GOSUB'", 
      "'IF'", "'NEXT'", "'THEN'", "'REM'", "'CHR$'", "'MID$'", "'LEFT$'", 
      "'RIGHT$'", "'STR$'", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'CLEAR'", 
      "'>: '", "'<: '", "'>'", "'<'", "','", "'LIST'", "'RUN'", "'END'", 
      "'\\u30EC\\u30C3\\u30C8'", "'='", "'FOR'", "'TO'", "'STEP'", "'INPUT'", 
      "';'", "'DIM'", "'SQR'", "':'", "'TEXT'", "'HGR'", "'HGR2'", "'LEN'", 
      "'CALL'", "'ASC'", "'HPLOT'", "'VPLOT'", "'PR#'", "'IN#'", "'VTAB'", 
      "'HTAB'", "'HOME'", "'ON'", "'PDL'", "'PLOT'", "'PEEK'", "'POKE'", 
      "'INT'", "'STOP'", "'HIMEM'", "'LOMEM'", "'FLASH'", "'INVERSE'", "'NORMAL'", 
      "'ONERR'", "'SPC'", "'FRE'", "'POS'", "'USR'", "'TRACE'", "'NOTRACE'", 
      "'AND'", "'OR'", "'DATA'", "'WAIT'", "'READ'", "'XDRAW'", "'DRAW'", 
      "'AT'", "'DEF'", "'FN'", "'VAL'", "'TAB'", "'SPEED'", "'ROT'", "'SCALE'", 
      "'COLOR'", "'HCOLOR'", "'HLIN'", "'VLIN'", "'SCRN'", "'POP'", "'SHLOAD'", 
      "'SIN'", "'COS'", "'TAN'", "'ATN'", "'RND'", "'SGN'", "'EXP'", "'LOG'", 
      "'ABS'", "'STORE'", "'RECALL'", "'GET'", "'^'", "'&'", "'GR'", "'NOT'", 
      "'RESTORE'", "'SAVE'", "'LOAD'", "'\\u003F'", "'INCLUDE'", "'CLS'"
    },
    std::vector<std::string>{
      "", "DOLLAR", "PERCENT", "RETURN", "PRINT", "GOTO", "GOSUB", "IF", 
      "NEXT", "THEN", "REM", "CHR", "MID", "LEFT", "RIGHT", "STR", "LPAREN", 
      "RPAREN", "PLUS", "MINUS", "TIMES", "DIV", "CLEAR", "GTE", "LTE", 
      "GT", "LT", "COMMA", "LIST", "RUN", "END", "LET", "EQ", "FOR", "TO", 
      "STEP", "INPUT", "SEMICOLON", "DIM", "SQR", "COLON", "TEXT", "HGR", 
      "HGR2", "LEN", "CALL", "ASC", "HPLOT", "VPLOT", "PRNUMBER", "INNUMBER", 
      "VTAB", "HTAB", "HOME", "ON", "PDL", "PLOT", "PEEK", "POKE", "INTF", 
      "STOP", "HIMEM", "LOMEM", "FLASH", "INVERSE", "NORMAL", "ONERR", "SPC", 
      "FRE", "POS", "USR", "TRACE", "NOTRACE", "AND", "OR", "DATA", "WAIT", 
      "READ", "XDRAW", "DRAW", "AT", "DEF", "FN", "VAL", "TAB", "SPEED", 
      "ROT", "SCALE", "COLOR", "HCOLOR", "HLIN", "VLIN", "SCRN", "POP", 
      "SHLOAD", "SIN", "COS", "TAN", "ATN", "RND", "SGN", "EXP", "LOG", 
      "ABS", "STORE", "RECALL", "GET", "EXPONENT", "AMPERSAND", "GR", "NOT", 
      "RESTORE", "SAVE", "LOAD", "QUESTION", "INCLUDE", "CLS", "COMMENT", 
      "STRINGLITERAL", "LETTERS", "NUMBER", "FLOAT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  basicParserStaticData = std::move(staticData);
}

}

BasicParser::BasicParser(TokenStream *input) : BasicParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

BasicParser::BasicParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  BasicParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *basicParserStaticData->atn, basicParserStaticData->decisionToDFA, basicParserStaticData->sharedContextCache, options);
}

BasicParser::~BasicParser() {
  delete _interpreter;
}

const atn::ATN& BasicParser::getATN() const {
  return *basicParserStaticData->atn;
}

std::string BasicParser::getGrammarFileName() const {
  return "Basic.g4";
}

const std::vector<std::string>& BasicParser::getRuleNames() const {
  return basicParserStaticData->ruleNames;
}

const dfa::Vocabulary& BasicParser::getVocabulary() const {
  return basicParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView BasicParser::getSerializedATN() const {
  return basicParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

BasicParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasicParser::ProgContext::EOF() {
  return getToken(BasicParser::EOF, 0);
}

std::vector<BasicParser::LineContext *> BasicParser::ProgContext::line() {
  return getRuleContexts<BasicParser::LineContext>();
}

BasicParser::LineContext* BasicParser::ProgContext::line(size_t i) {
  return getRuleContext<BasicParser::LineContext>(i);
}


size_t BasicParser::ProgContext::getRuleIndex() const {
  return BasicParser::RuleProg;
}


std::any BasicParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::ProgContext* BasicParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, BasicParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(203); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(202);
      line();
      setState(205); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == BasicParser::NUMBER);
    setState(207);
    match(BasicParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

BasicParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BasicParser::LinenumberContext* BasicParser::LineContext::linenumber() {
  return getRuleContext<BasicParser::LinenumberContext>(0);
}

std::vector<BasicParser::AmprstmtContext *> BasicParser::LineContext::amprstmt() {
  return getRuleContexts<BasicParser::AmprstmtContext>();
}

BasicParser::AmprstmtContext* BasicParser::LineContext::amprstmt(size_t i) {
  return getRuleContext<BasicParser::AmprstmtContext>(i);
}

tree::TerminalNode* BasicParser::LineContext::COMMENT() {
  return getToken(BasicParser::COMMENT, 0);
}

tree::TerminalNode* BasicParser::LineContext::REM() {
  return getToken(BasicParser::REM, 0);
}

std::vector<tree::TerminalNode *> BasicParser::LineContext::COLON() {
  return getTokens(BasicParser::COLON);
}

tree::TerminalNode* BasicParser::LineContext::COLON(size_t i) {
  return getToken(BasicParser::COLON, i);
}


size_t BasicParser::LineContext::getRuleIndex() const {
  return BasicParser::RuleLine;
}


std::any BasicParser::LineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicVisitor*>(visitor))
    return parserVisitor->visitLine(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::LineContext* BasicParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 2, BasicParser::RuleLine);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(209);
    linenumber();
    setState(222);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      setState(210);
      amprstmt();
      setState(217);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == BasicParser::COLON) {
        setState(211);
        match(BasicParser::COLON);
        setState(213);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & -756694541133675016) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
          ((1ULL << (_la - 64)) & 53962933057812871) != 0)) {
          setState(212);
          amprstmt();
        }
        setState(219);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      setState(220);
      match(BasicParser::COMMENT);
      break;
    }

    case 3: {
      setState(221);
      match(BasicParser::REM);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AmperoperContext ------------------------------------------------------------------

BasicParser::AmperoperContext::AmperoperContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasicParser::AmperoperContext::AMPERSAND() {
  return getToken(BasicParser::AMPERSAND, 0);
}


size_t BasicParser::AmperoperContext::getRuleIndex() const {
  return BasicParser::RuleAmperoper;
}


std::any BasicParser::AmperoperContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicVisitor*>(visitor))
    return parserVisitor->visitAmperoper(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::AmperoperContext* BasicParser::amperoper() {
  AmperoperContext *_localctx = _tracker.createInstance<AmperoperContext>(_ctx, getState());
  enterRule(_localctx, 4, BasicParser::RuleAmperoper);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(224);
    match(BasicParser::AMPERSAND);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LinenumberContext ------------------------------------------------------------------

BasicParser::LinenumberContext::LinenumberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasicParser::LinenumberContext::NUMBER() {
  return getToken(BasicParser::NUMBER, 0);
}


size_t BasicParser::LinenumberContext::getRuleIndex() const {
  return BasicParser::RuleLinenumber;
}


std::any BasicParser::LinenumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicVisitor*>(visitor))
    return parserVisitor->visitLinenumber(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::LinenumberContext* BasicParser::linenumber() {
  LinenumberContext *_localctx = _tracker.createInstance<LinenumberContext>(_ctx, getState());
  enterRule(_localctx, 6, BasicParser::RuleLinenumber);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(226);
    match(BasicParser::NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AmprstmtContext ------------------------------------------------------------------

BasicParser::AmprstmtContext::AmprstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BasicParser::StatementContext* BasicParser::AmprstmtContext::statement() {
  return getRuleContext<BasicParser::StatementContext>(0);
}

BasicParser::AmperoperContext* BasicParser::AmprstmtContext::amperoper() {
  return getRuleContext<BasicParser::AmperoperContext>(0);
}

tree::TerminalNode* BasicParser::AmprstmtContext::COMMENT() {
  return getToken(BasicParser::COMMENT, 0);
}

tree::TerminalNode* BasicParser::AmprstmtContext::REM() {
  return getToken(BasicParser::REM, 0);
}


size_t BasicParser::AmprstmtContext::getRuleIndex() const {
  return BasicParser::RuleAmprstmt;
}


std::any BasicParser::AmprstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasicVisitor*>(visitor))
    return parserVisitor->visitAmprstmt(this);
  else
    return visitor->visitChildren(this);
}

BasicParser::AmprstmtContext* BasicParser::amprstmt() {
  AmprstmtContext *_localctx = _tracker.createInstance<AmprstmtContext>(_ctx, getState());
  enterRule(_localctx, 8, BasicParser::RuleAmprstmt);
